--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 
   <!-- PWA -->
   <meta name="theme-color" content="#0b1320" />
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
   <link rel="manifest" href="manifest.json" />
   <link rel="apple-touch-icon" href="assets/icons/icon-192.png" />
 
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="styles.css?v=v9" />
 </head>
 <body>
   <header class="app-header">
@@ -367,6 +370,6 @@ Investigation
     </div>
   </div>
 
-  <script src="app.js"></script>
+  <script src="app.js?v=v9"></script>
 </body>
 </html>
